[tool.poetry]
name = "backend-mimic-assessment"
version = "0.1.0"
description = "Scrambles words in a text file to recreate a random new text."
authors = ["Janell Huyck <Janell.Huyck@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
